sbin_PROGRAMS=raidutil
raidutil_SOURCES=alarm.cpp bufiolsb.c cmdlist.cpp command.cpp config.cpp creatrad.cpp deletrad.cpp dynsize.cpp engiface.cpp eventlog.cpp expand.cpp flash.cpp flashmem.cpp forcest.cpp id_list.cpp intlist.cpp listdev.cpp lzssdon.cpp lzstrbuf.cpp modnvram.cpp namarray.cpp nvrambit.cpp parsargv.cpp parser.cpp parserr.cpp raidutil.cpp rawdata.cpp rdutlosd.cpp rmwflash.cpp rstnvram.cpp scsilist.cpp setcache.cpp setrate.cpp setspeed.cpp showinq.cpp status.cpp strlist.cpp taskctrl.cpp uartdmp.cpp usage.cpp zap.cpp setscfg.cpp segment.cpp swap_em.c
raidutil_CPPFLAGS=-O3 -DMESSAGES -D_DPT_ACTIVE_ALIGNMENT -Dtrue=1 -Dfalse=0 -DHORIZONTAL -DNEW_RSC_MGR -DNEW_RSC_HDR -D_DPT_FLASH -I$(top_srcdir)/include
raidutil_LDADD=../lib/libraidutil.la
